--- a/.github/workflows/generator-IOS.yml
+++ b/.github/workflows/generator-IOS.yml
@@ -69,7 +69,7 @@ env:
   TAG_NAME: "${{ inputs.upload-tag }}"
   VCPKG_BINARY_SOURCES: "clear;x-gha,readwrite"
   # vcpkg version: 2024.07.12
-  VCPKG_COMMIT_ID: "6f29f12e82a8293156836ad81cc9bf5af41fe836"
+  VCPKG_COMMIT_ID: "b2cb0da531c2f1f740045bfe7c4dac59f0b2b69c"
   VERSION: "${{ fromJson(inputs.extras).version }}"
   NDK_VERSION: "r27c"
   #signing keys env variable checks
@@ -309,7 +309,7 @@ jobs:
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@v1
         with:
-            toolchain: ${{ env.MAC_RUST_VERSION }}
+            toolchain: ${{ env.RUST_VERSION }}
             targets: ${{ matrix.job.target }}
             components: "rustfmt"
   
