--- a/.github/workflows/generator-windows.yml
+++ b/.github/workflows/generator-windows.yml
@@ -336,14 +336,7 @@ jobs:
         env:
           VCPKG_DEFAULT_HOST_TRIPLET: ${{ matrix.job.vcpkg-triplet }}
         run: |
-          vcpkg install --triplet x64-windows-static --clean-after-build `
-            aom:x64-windows-static `
-            ffmpeg[amf,core,nvcodec]:x64-windows-static `
-            ffnvcodec:x64-windows-static `
-            libjpeg-turbo:x64-windows-static `
-            libvpx:x64-windows-static `
-            libyuv:x64-windows-static `
-            opus:x64-windows-static
+          vcpkg install --triplet x64-windows-static --clean-after-build
 
       - name: icon stuff
         if: ${{ inputs.iconlink != 'false' }}
