chore: update macOS build job name and runner configuration to use matrix values

--- a/.github/workflows/generator-macos-x86.yml
+++ b/.github/workflows/generator-macos-x86.yml
@@ -92,8 +92,8 @@ jobs:
       version: ${{ fromJson(inputs.extras).version }}
 
   build-for-macos-flutter:
-    name: Build macOS
-    runs-on: macos-13
+    name: ${{ matrix.job.target }}
+    runs-on: ${{ matrix.job.os }}
     needs: [generate-bridge]
     strategy:
       fail-fast: false
