--- a/.github/workflows/generator-macos.yml
+++ b/.github/workflows/generator-macos.yml
@@ -518,8 +518,24 @@ jobs:
         continue-on-error: true
         if: fromJson(inputs.extras).statussort == 'true'
         run: |
-          wget https://raw.githubusercontent.com/VenimK/creator/refs/heads/master/.github/patches/statussort.diff
-          git apply statussort.diff
+          # Download the appropriate statussort patch based on RustDesk version
+          if [[ "${{ env.VERSION }}" == "1.3.8" || "${{ env.VERSION }}" == "1.3.9" ]]; then
+            # For RustDesk 1.3.8/1.3.9, use a version-specific patch
+            wget https://raw.githubusercontent.com/rustdesk/rustdesk/refs/tags/${{ env.VERSION }}/flutter/lib/common/widgets/peers_view.dart -O peers_view_original.dart
+            # Create a modified version with status sort enabled
+            sed -i '' 's/\/\/ static const String status = .*/static const String status = "Status";/' peers_view_original.dart
+            sed -i '' 's/\/\/ PeerSortType.status/PeerSortType.status/' peers_view_original.dart
+            sed -i '' 's/\/\/ case PeerSortType.status:/case PeerSortType.status:/' peers_view_original.dart
+            sed -i '' 's/\/\/ \s*peers\.sort((p1, p2) => p1\.online ? -1 : 1);/          peers.sort((p1, p2) => p1.online ? -1 : 1);/' peers_view_original.dart
+            sed -i '' 's/\/\/ \s*break;/          break;/' peers_view_original.dart
+            mv peers_view_original.dart flutter/lib/common/widgets/peers_view.dart
+          else
+            # For other versions, use the standard patch
+            wget https://raw.githubusercontent.com/VenimK/creator/refs/heads/master/.github/patches/statussort.diff
+            if [[ "${{ fromJson(inputs.extras).statussort }}" == "true" ]]; then
+              git apply statussort.diff || true
+            fi
+          fi
 
       - name: removeNewVersionNotif
         continue-on-error: true
